Closed
Bug 172233
Opened 23 years ago
Closed 23 years ago
After creating a bookmark from a Sherlock url, Chimera reports a bookmark error upon relaunch
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: chrispetersen, Assigned: sfraser_bugs)
Details
Build: 2002-10-02-04
Platform: OS X 10.2
Expected Results: Chimera show launch with any errors
What I got: Error Reading Bookmarks dialog is displayed
Steps to reproduce:
1) Open Chimera
2) Go to Sherlock and click on Ebay icon
3) Search for a item
4) Drag and drop a listed item found into Chimera's bookmark toolbar or sidebar.
A bookmark should be created.
5) Quit and relaunch Chimera.
6) A reading bookmark error dialog should be displayed
| Reporter | ||
Updated•23 years ago
|
Summary: After creating a bookmark from Sherlock url, Chimera reports a bookmark error upon relaunch → After creating a bookmark from a Sherlock url, Chimera reports a bookmark error upon relaunch
| Assignee | ||
Comment 1•23 years ago
|
||
This is actually a bug in Sherlock. Its 'url ' drag data wrongly includes an
extra null byte at the end.
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•23 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 3•23 years ago
|
||
Cool. Verified in the 2002-10-03-04 NB.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•