Fix bug 172233 -- bad bookmarks file after dragging in from Sherlock. Sherlock has a bogus null byte at the end of its url drag data, which we need to strip out.